--- a/src/index.css
+++ b/src/index.css
@@ -66,3 +66,9 @@
 /*    background-color: #f9f9f9;*/
 /*  }*/
 /*}*/
+
+@import url("https://fonts.googleapis.com/css2?family=Baskervville:ital@0;1&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap");
+
+body{
+    font-family: 'Nunito', sans-serif;
+}
